<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jhon.tiendaxyz.MainActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp"></LinearLayout>

    <LinearLayout
        android:layout_width="381dp"
        android:layout_height="500dp"
        android:orientation="vertical"
        android:weightSum="1"
        tools:layout_editor_absoluteX="2dp"
        tools:layout_editor_absoluteY="5dp">

        <TextView
            android:id="@+id/txtTitulo"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_weight="0.08"
            android:text="@string/titulo"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="95dp"
            tools:layout_editor_absoluteY="16dp" />

        <TextView
            android:id="@+id/txtMateriales"
            android:layout_width="match_parent"
            android:layout_height="21dp"
            android:text="@string/txtMateriales"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="124dp"
            tools:layout_editor_absoluteY="95dp" />

        <Spinner
            android:id="@+id/cmbMateriales"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/txtDIjes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtDijes"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/cmbDijes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/txtTipos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtTipos"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/cmbTipos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/lblMoneda"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.05"
            android:text="@string/lblMoneda"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/cmbMoneda"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/lblCantidad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblCantidad"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtCantidad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnCalcular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="calcular"
                android:text="@string/btnCalcular" />

            <Button
                android:id="@+id/btnBorrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="borrar"
                android:text="@string/btnBorrar" />
        </LinearLayout>

        <TextView
            android:id="@+id/txtTotal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.15"
            android:text="@string/txtTotal"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
